<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_configuracao"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondaryTextLight"
    tools:context="br.com.cafecomandroid.meutempo.ConfiguracaoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            tools:targetApi="lollipop" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/label_conf_locale"
            android:textColor="@color/colorSecondaryText"
            android:textSize="13sp" />

        <android.support.design.widget.TextInputLayout
            style="@style/Espacamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_locale_conf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_locale"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/label_conf_cnt"
            android:textColor="@color/colorSecondaryText"
            android:textSize="13sp" />

        <android.support.design.widget.TextInputLayout
            style="@style/Espacamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_cnt_conf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_numdias_cnt"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/label_conf_units"
            android:textColor="@color/colorSecondaryText"
            android:textSize="13sp" />

        <RadioGroup
            android:id="@+id/rg_units"
            style="@style/Espacamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:checked="true"
                android:id="@+id/rb_celcius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/celcius" />


            <RadioButton
                android:id="@+id/rb_fahrenheit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fahrenheit" />

        </RadioGroup>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
